WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110476
[BlackBerry] LayerFilterRenderer: fix inclusion of Vector.h
https://bugs.webkit.org/show_bug.cgi?id=110476
Summary
[BlackBerry] LayerFilterRenderer: fix inclusion of Vector.h
Alberto Garcia
Reported
2013-02-21 08:22:45 PST
It should be wtf/Vector.h:
http://trac.webkit.org/browser/trunk/Source/WebCore/platform/graphics/blackberry/LayerFilterRenderer.cpp?rev=124242#L34
Attachments
Patch
(1.11 KB, patch)
2013-02-21 08:24 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-02-21 08:24:56 PST
Created
attachment 189536
[details]
Patch
Rob Buis
Comment 2
2013-02-21 08:34:01 PST
Comment on
attachment 189536
[details]
Patch Makes sense.
WebKit Review Bot
Comment 3
2013-02-21 09:04:03 PST
Comment on
attachment 189536
[details]
Patch Clearing flags on attachment: 189536 Committed
r143612
: <
http://trac.webkit.org/changeset/143612
>
WebKit Review Bot
Comment 4
2013-02-21 09:04:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug