[BlackBerry] LayerFilterRenderer: fix inclusion of Vector.h https://bugs.webkit.org/show_bug.cgi?id=110476

Patch by Xan Lopez <xlopez@rim.com> on 2013-02-21
Reviewed by Rob Buis.

Added in r124242. The include line should be wtf/Vector.h

* platform/graphics/blackberry/LayerFilterRenderer.cpp:

Canonical link: https://commits.webkit.org/128761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143612 268f45cc-cd09-0410-ab3c-d52691b4dbfc